[package]
name = "mdbook-treesitter"
description = "mdbook-treesitter is an mdBook preprocessor for html adding tree-sitter highlighting support."
homepage = "https://github.com/Corpauration/mdbook-treesitter"
repository = "https://github.com/Corpauration/mdbook-treesitter"
version = "1.0.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "mdbook-treesitter"
path = "src/bin/mdbook-treesitter.rs"
required-features = ["cli"]

[lib]
name = "mdbook_treesitter"
path = "src/lib.rs"

[dependencies]
log = "0.4.27"
env_logger = { version = "0.11.8", optional = true }
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
tree-sitter = "0.24.7"
tree-sitter-highlight = "0.24.7"
libloading = "0.8.6"
anyhow = "1"
html-escape = "0.2.13"
map-macro = "0.3.0"
clap = { version = "4.5.35", default-features = false, features = ["std", "derive"], optional = true }
mdbook = { version = "0.4.48", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
pulldown-cmark = "0.12.2"
regex = "1.11.1"

[features]
default = ["cli"]

# Enable the command line binary
cli = ["dep:clap", "dep:env_logger"]
