[package]
name = "mdbook-treesitter"
description = "mdbook-treesitter is an mdBook preprocessor for html adding tree-sitter highlighting support."
homepage = "https://github.com/Corpauration/mdbook-treesitter"
repository = "https://github.com/Corpauration/mdbook-treesitter"
version = "1.0.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "mdbook-treesitter"
path = "src/bin/mdbook-treesitter.rs"
required-features = ["cli"]

[lib]
name = "mdbook_treesitter"
path = "src/lib.rs"

[dependencies]
tracing = { version = "0.1.43", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["std", "fmt", "ansi", "env-filter"], optional = true }
tree-sitter = "0.25.10"
tree-sitter-highlight = "0.25.10"
libloading = "0.9.0"
anyhow = "1.0.100"
html-escape = "0.2.13"
map-macro = "0.3.0"
clap = { version = "4.5.53", default-features = false, features = ["std", "derive"], optional = true }
mdbook-preprocessor = { version = "0.5.1", default-features = false }
serde_json = "1.0.145"
mdbook-markdown = "0.5.1"
regex = "1.12.2"

[features]
default = ["cli"]

# Enable the command line binary
cli = ["dep:clap", "dep:tracing-subscriber"]
